--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inotebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://izeeshan007.github.io",
+  "homepage": "https://izeeshan007.github.io/myNoteBook",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
